--- a/index.html
+++ b/index.html
@@ -1487,15 +1487,16 @@
                                 <div class="footer-widget__column footer-widget__links clearfix">
                                     <h3 class="footer-widget__title">Links</h3>
                                     <ul class="footer-widget__links-list list-unstyled clearfix">
-                                        <li><a href="about.html">About Us</a></li>
-                                        <li><a href="about.html">Our Mission</a></li>
-                                        <li><a href="team.html">Meet the Team</a></li>
-                                        <li><a href="project.html">Our Projects</a></li>
-                                        <li><a href="contact.html">Contact</a></li>
+                                        <li><a href="#home">Home</a></li>
+                                        <li><a href="#about">About</a></li>
+                                        <li><a href="#services">Services</a></li>
+                                        <li><a href="#team">Team</a></li>
+                                        <li><a href="#testimonial">Testimonial</a></li>
+                                        <li><a href="#blog">Blog</a></li>
                                     </ul>
                                 </div>
                             </div>
-                            <div class="col-xl-2 col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="300ms">
+                            <!-- <div class="col-xl-2 col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="300ms">
                                 <div class="footer-widget__column footer-widget__explore clearfix">
                                     <h3 class="footer-widget__title">Explore</h3>
                                     <ul class="footer-widget__explore-list list-unstyled clearfix">
@@ -1505,7 +1506,7 @@
                                         <li><a href="about.html">Help Center</a></li>
                                     </ul>
                                 </div>
-                            </div>
+                            </div> -->
                             <div class="col-xl-5 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="400ms">
                                 <div class="footer-widget__column footer-widget__newsletter">
                                     <h3 class="footer-widget__title">Newsletter</h3>
@@ -1534,12 +1535,12 @@
                                 <div class="site-footer__bottom-inner">
                                     <div class="site-footer__bottom-left">
                                         <p class="site-footer__bottom-text">© Copyrights, 2021 <a
-                                                href="#">BracketWeb</a></p>
+                                                href="#">IPNESS</a></p>
                                     </div>
                                     <div class="site-footer__bottom-right">
                                         <ul class="list-unstyled site-footer__bottom-menu">
-                                            <li><a href="about.html">Terms & Conditions</a></li>
-                                            <li><a href="about.html">Privacy Policy</a></li>
+                                            <li><a href="#">Terms & Conditions</a></li>
+                                            <li><a href="#">Privacy Policy</a></li>
                                         </ul>
                                     </div>
                                 </div>
