--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                                 <li class="dropdown">
                                     <a href="#">Menu</a>
                                     <ul>
-                                        <li><a href="about.html">About</a></li>
-                                        <li><a href="team.html">Team</a></li>
+                                        <li><a href="./pages/about.html">About</a></li>
+                                        <li><a href="./team.html">Team</a></li>
                                         <li><a href="team-details.html">Team Details</a></li>
                                         <li><a href="testimonials.html">Testimonials</a></li>
                                         <li><a href="why-choose.html">Why Choose</a></li>
