--- a/index.html
+++ b/index.html
@@ -853,11 +853,11 @@
                                 </div>
                                 <div class="team-one__content">
                                     <h4 class="team-one__name">Armah Rockson</h4>
-                                    <p class="team-one__title">IP Network Engineer</p>
+                                    <p class="team-one__title">Lead IP Network Engineer</p>
                                 </div>
                                 <div class="team-one__hover">
                                     <h4 class="team-one__hover-name">Armah Rockson</h4>
-                                    <p class="team-one__hover-title">IP Network Engineer</p>
+                                    <p class="team-one__hover-title">Lead IP Network Engineer</p>
                                     <div class="team-one__social">
                                         <a href="#"><i class="fab fa-twitter"></i></a>
                                         <a href="#"><i class="fab fa-facebook"></i></a>
@@ -1139,7 +1139,7 @@
                                                     </div>
                                                     <div class="text">
                                                         <h4>we grow businesses</h4>
-                                                        <p>We may prioritize quality and reliability in their services, aiming to deliver robust and secure IT solutions that meet industry standards. 
+                                                        <p>We prioritize quality and reliability in their services, aiming to deliver robust and secure IT solutions that meet industry standards. 
 														This can be crucial in ensuring the smooth and uninterrupted operation of your IT systems and minimizing potential downtime.</p>
                                                     </div>
                                                 </li>
