--- a/pages/services2.html
+++ b/pages/services2.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Services || IPness || IPness HTML Template For Business</title>
     <!-- favicons Icons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png" />
-    <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/images/favicons/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/images/favicons/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/images/favicons/favicon-16x16.png" />
+    <link rel="manifest" href="../assets/images/favicons/site.webmanifest" />
     <meta name="description" content="Qutiiz HTML Template For Business" />
 
     <!-- fonts -->
@@ -25,36 +25,36 @@
         rel="stylesheet">
 
 
-    <link rel="stylesheet" href="assets/vendors/bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/vendors/animate/animate.min.css" />
-    <link rel="stylesheet" href="assets/vendors/animate/custom-animate.css" />
-    <link rel="stylesheet" href="assets/vendors/fontawesome/css/all.min.css" />
-    <link rel="stylesheet" href="assets/vendors/jarallax/jarallax.css" />
-    <link rel="stylesheet" href="assets/vendors/jquery-magnific-popup/jquery.magnific-popup.css" />
-    <link rel="stylesheet" href="assets/vendors/nouislider/nouislider.min.css" />
-    <link rel="stylesheet" href="assets/vendors/nouislider/nouislider.pips.css" />
-    <link rel="stylesheet" href="assets/vendors/odometer/odometer.min.css" />
-    <link rel="stylesheet" href="assets/vendors/swiper/swiper.min.css" />
-    <link rel="stylesheet" href="assets/vendors/qutiiz-icons/style.css">
-    <link rel="stylesheet" href="assets/vendors/qutiiz-icons-two/style.css">
-    <link rel="stylesheet" href="assets/vendors/tiny-slider/tiny-slider.min.css" />
-    <link rel="stylesheet" href="assets/vendors/reey-font/stylesheet.css" />
-    <link rel="stylesheet" href="assets/vendors/owl-carousel/owl.carousel.min.css" />
-    <link rel="stylesheet" href="assets/vendors/owl-carousel/owl.theme.default.min.css" />
-    <link rel="stylesheet" href="assets/vendors/bxslider/jquery.bxslider.css" />
-    <link rel="stylesheet" href="assets/vendors/bootstrap-select/css/bootstrap-select.min.css" />
-    <link rel="stylesheet" href="assets/vendors/vegas/vegas.min.css" />
-    <link rel="stylesheet" href="assets/vendors/jquery-ui/jquery-ui.css" />
-    <link rel="stylesheet" href="assets/vendors/timepicker/timePicker.css" />
-
-    <!-- template styles -->
-    <link rel="stylesheet" href="assets/css/qutiiz.css" />
-    <link rel="stylesheet" href="assets/css/qutiiz-responsive.css" />
+        <link rel="stylesheet" href="../assets/vendors/bootstrap/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="../assets/vendors/animate/animate.min.css" />
+        <link rel="stylesheet" href="../assets/vendors/animate/custom-animate.css" />
+        <link rel="stylesheet" href="../assets/vendors/fontawesome/css/all.min.css" />
+        <link rel="stylesheet" href="../assets/vendors/jarallax/jarallax.css" />
+        <link rel="stylesheet" href="../assets/vendors/jquery-magnific-popup/jquery.magnific-popup.css" />
+        <link rel="stylesheet" href="../assets/vendors/nouislider/nouislider.min.css" />
+        <link rel="stylesheet" href="../assets/vendors/nouislider/nouislider.pips.css" />
+        <link rel="stylesheet" href="../assets/vendors/odometer/odometer.min.css" />
+        <link rel="stylesheet" href="../assets/vendors/swiper/swiper.min.css" />
+        <link rel="stylesheet" href="../assets/vendors/qutiiz-icons/style.css">
+        <link rel="stylesheet" href="../assets/vendors/qutiiz-icons-two/style.css">
+        <link rel="stylesheet" href="../assets/vendors/tiny-slider/tiny-slider.min.css" />
+        <link rel="stylesheet" href="../assets/vendors/reey-font/stylesheet.css" />
+        <link rel="stylesheet" href="../assets/vendors/owl-carousel/owl.carousel.min.css" />
+        <link rel="stylesheet" href="../assets/vendors/owl-carousel/owl.theme.default.min.css" />
+        <link rel="stylesheet" href="../assets/vendors/bxslider/jquery.bxslider.css" />
+        <link rel="stylesheet" href="../assets/vendors/bootstrap-select/css/bootstrap-select.min.css" />
+        <link rel="stylesheet" href="../assets/vendors/vegas/vegas.min.css" />
+        <link rel="stylesheet" href="../assets/vendors/jquery-ui/jquery-ui.css" />
+        <link rel="stylesheet" href="../assets/vendors/timepicker/timePicker.css" />
+    
+        <!-- template styles -->
+        <link rel="stylesheet" href="../assets/css/qutiiz.css" />
+        <link rel="stylesheet" href="../assets/css/qutiiz-responsive.css" />
 </head>
 
 <body>
     <div class="preloader">
-        <img class="preloader__image" width="60" src="assets/images/loader.png" alt="" />
+        <img class="preloader__image" width="60" src="../assets/images/loader.png" alt="" />
     </div>
     <!-- /.preloader -->
     <div class="page-wrapper">
@@ -63,14 +63,14 @@
                 <div class="main-menu-wrapper clearfix">
                     <div class="main-menu-wrapper__left">
                         <div class="main-menu-wrapper__logo">
-                            <a href="index.html"><img src="assets/images/resources/logo-1.png" alt=""></a>
+                            <a href="index.html"><img src="../assets/images/resources/logo-1.png" alt=""></a>
                         </div>
                         <div class="main-menu-wrapper__main-menu">
                             <a href="#" class="mobile-nav__toggler"><i class="fa fa-bars"></i></a>
                             <ul class="main-menu__list">
 
                                 <li class="dropdown megamenu">
-                                    <a href="index.html">Home </a>
+                                    <a href="../index.html">Home </a>
                                     
                                 </li>
 
@@ -97,7 +97,7 @@
                                         <li><a href="graphic-design.html">Graphic Designing </a></li>
                                         <li><a href="website-development.html">Website Developments </a></li>
                                         <li><a href="social-marketing.html">Social Marketings </a></li>
-                                        <li><a href="content-writing.html">CyberSecurity  </a></li>
+                                        <li><a href="content-writing.html">Content Writing  </a></li>
                                     </ul>
                                 </li>
                                 <li class="dropdown">
@@ -152,7 +152,7 @@
 
         <!--Page Header Start-->
         <section class="page-header">
-            <div class="page-header-bg" style="background-image: url(assets/images/backgrounds/page-header-bg.jpg)">
+            <div class="page-header-bg" style="background-image: url(../assets/images/backgrounds/page-header-bg.jpg)">
             </div>
             <div class="page-header-border"></div>
             <div class="page-header-border page-header-border-two"></div>
@@ -168,7 +168,7 @@
             <div class="container">
                 <div class="page-header__inner">
                     <ul class="thm-breadcrumb list-unstyled">
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="../index.html">Home</a></li>
                         <li class="active">Services</li>
                     </ul>
                     <h2>Services</h2>
@@ -186,7 +186,7 @@
                         <div class="services-three__single">
                             <div class="services-three__single-img">
                                 <div class="services-three__single-img-inner">
-                                    <img src="assets/images/update1.0/services/services-v3-img1.jpg" alt="" />
+                                    <img src="../assets/images/update1.0/services/services-v3-img1.jpg" alt="" />
                                 </div>
                                 <div class="services-three__icon">
                                     <span class="icon-online-shopping"></span>
@@ -209,7 +209,7 @@
                         <div class="services-three__single">
                             <div class="services-three__single-img">
                                 <div class="services-three__single-img-inner">
-                                    <img src="assets/images/update1.0/services/services-v3-img2.jpg" alt="" />
+                                    <img src="../assets/images/update1.0/services/services-v3-img2.jpg" alt="" />
                                 </div>
                                 <div class="services-three__icon">
                                     <span class="icon-growth"></span>
@@ -231,7 +231,7 @@
                         <div class="services-three__single">
                             <div class="services-three__single-img">
                                 <div class="services-three__single-img-inner">
-                                    <img src="assets/images/update1.0/services/services-v3-img3.jpg" alt="" />
+                                    <img src="../assets/images/update1.0/services/services-v3-img3.jpg" alt="" />
                                 </div>
                                 <div class="services-three__icon">
                                     <span class="icon-webpage"></span>
@@ -254,7 +254,7 @@
                         <div class="services-three__single">
                             <div class="services-three__single-img">
                                 <div class="services-three__single-img-inner">
-                                    <img src="assets/images/update1.0/services/services-v3-img4.jpg" alt="" />
+                                    <img src="../assets/images/update1.0/services/services-v3-img4.jpg" alt="" />
                                 </div>
                                 <div class="services-three__icon">
                                     <span class="icon-front-end"></span>
@@ -276,7 +276,7 @@
                         <div class="services-three__single">
                             <div class="services-three__single-img">
                                 <div class="services-three__single-img-inner">
-                                    <img src="assets/images/update1.0/services/services-v3-img5.jpg" alt="" />
+                                    <img src="../assets/images/update1.0/services/services-v3-img5.jpg" alt="" />
                                 </div>
                                 <div class="services-three__icon">
                                     <span class="icon-two-app-development"></span>
@@ -298,7 +298,7 @@
                         <div class="services-three__single">
                             <div class="services-three__single-img">
                                 <div class="services-three__single-img-inner">
-                                    <img src="assets/images/update1.0/services/services-v3-img6.jpg" alt="" />
+                                    <img src="../assets/images/update1.0/services/services-v3-img6.jpg" alt="" />
                                 </div>
                                 <div class="services-three__icon">
                                     <span class="icon-two-planning"></span>
@@ -352,7 +352,7 @@
                     <div class="site-footer__top-inner">
                         <div class="site-footer__top-left">
                             <div class="site-footer__top-logo">
-                                <a href="index.html"><img src="assets/images/resources/footer-logo.png" alt=""></a>
+                                <a href="index.html"><img src="../assets/images/resources/footer-logo.png" alt=""></a>
                             </div>
                             <div class="site-footer__top-title-box">
                                 <h3 class="site-footer__top-title">Let's work together just drop me a line - <a
@@ -372,7 +372,7 @@
             </div>
             <div class="site-footer__middle">
                 <div class="site-footer-shape"
-                    style="background-image: url(assets/images/shapes/site-footer-shape.png)"></div>
+                    style="background-image: url(../assets/images/shapes/site-footer-shape.png)"></div>
                 <div class="container">
                     <div class="site-footer__middle-inner">
                         <div class="row">
@@ -491,7 +491,7 @@
             <span class="mobile-nav__close mobile-nav__toggler"><i class="fa fa-times"></i></span>
 
             <div class="logo-box">
-                <a href="index.html" aria-label="logo image"><img src="assets/images/resources/logo-1.png" width="155"
+                <a href="../index.html" aria-label="logo image"><img src="../assets/images/resources/logo-1.png" width="155"
                         alt="" /></a>
             </div>
             <!-- /.logo-box -->
@@ -543,34 +543,34 @@
     <a href="#" data-target="html" class="scroll-to-target scroll-to-top"><i class="fa fa-angle-up"></i></a>
 
 
-    <script src="assets/vendors/jquery/jquery-3.6.0.min.js"></script>
-    <script src="assets/vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendors/jarallax/jarallax.min.js"></script>
-    <script src="assets/vendors/jquery-ajaxchimp/jquery.ajaxchimp.min.js"></script>
-    <script src="assets/vendors/jquery-appear/jquery.appear.min.js"></script>
-    <script src="assets/vendors/jquery-circle-progress/jquery.circle-progress.min.js"></script>
-    <script src="assets/vendors/jquery-magnific-popup/jquery.magnific-popup.min.js"></script>
-    <script src="assets/vendors/jquery-validate/jquery.validate.min.js"></script>
-    <script src="assets/vendors/nouislider/nouislider.min.js"></script>
-    <script src="assets/vendors/odometer/odometer.min.js"></script>
-    <script src="assets/vendors/swiper/swiper.min.js"></script>
-    <script src="assets/vendors/tiny-slider/tiny-slider.min.js"></script>
-    <script src="assets/vendors/wnumb/wNumb.min.js"></script>
-    <script src="assets/vendors/wow/wow.js"></script>
-    <script src="assets/vendors/isotope/isotope.js"></script>
-    <script src="assets/vendors/countdown/countdown.min.js"></script>
-    <script src="assets/vendors/owl-carousel/owl.carousel.min.js"></script>
-    <script src="assets/vendors/bxslider/jquery.bxslider.min.js"></script>
-    <script src="assets/vendors/bootstrap-select/js/bootstrap-select.min.js"></script>
-    <script src="assets/vendors/vegas/vegas.min.js"></script>
-    <script src="assets/vendors/jquery-ui/jquery-ui.js"></script>
-    <script src="assets/vendors/timepicker/timePicker.js"></script>
+    <script src="../assets/vendors/jquery/jquery-3.6.0.min.js"></script>
+    <script src="../assets/vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/vendors/jarallax/jarallax.min.js"></script>
+    <script src="../assets/vendors/jquery-ajaxchimp/jquery.ajaxchimp.min.js"></script>
+    <script src="../assets/vendors/jquery-appear/jquery.appear.min.js"></script>
+    <script src="../assets/vendors/jquery-circle-progress/jquery.circle-progress.min.js"></script>
+    <script src="../assets/vendors/jquery-magnific-popup/jquery.magnific-popup.min.js"></script>
+    <script src="../assets/vendors/jquery-validate/jquery.validate.min.js"></script>
+    <script src="../assets/vendors/nouislider/nouislider.min.js"></script>
+    <script src="../assets/vendors/odometer/odometer.min.js"></script>
+    <script src="../assets/vendors/swiper/swiper.min.js"></script>
+    <script src="../assets/vendors/tiny-slider/tiny-slider.min.js"></script>
+    <script src="../assets/vendors/wnumb/wNumb.min.js"></script>
+    <script src="../assets/vendors/wow/wow.js"></script>
+    <script src="../assets/vendors/isotope/isotope.js"></script>
+    <script src="../assets/vendors/countdown/countdown.min.js"></script>
+    <script src="../assets/vendors/owl-carousel/owl.carousel.min.js"></script>
+    <script src="../assets/vendors/bxslider/jquery.bxslider.min.js"></script>
+    <script src="../assets/vendors/bootstrap-select/js/bootstrap-select.min.js"></script>
+    <script src="../assets/vendors/vegas/vegas.min.js"></script>
+    <script src="../assets/vendors/jquery-ui/jquery-ui.js"></script>
+    <script src="../assets/vendors/timepicker/timePicker.js"></script>
 
 
 
 
     <!-- template js -->
-    <script src="assets/js/qutiiz.js"></script>
+    <script src="../assets/js/qutiiz.js"></script>
 </body>
 
 </html>
